clear and  esay